# Polymarket-News-Trader

./: .gitignore  README.md  feeds.candidates.yaml  pyproject.toml  requirements.txt  rules.example.yaml  rules.yaml
polymarket_news_trader/: cli.py
polymarket_news_trader/backtest/: engine.py
polymarket_news_trader/execution/: trader.py
polymarket_news_trader/ingest/: gdelt.py  rss.py
polymarket_news_trader/markets/: selector.py
polymarket_news_trader/rules/: matcher.py
polymarket_news_trader/store/: dedup.py
src/polymarket_news_trader/: backtest.py  clob_client.py  config.py  gamma.py  gdelt_ingest.py  main.py  news.py  prices.py  risk.py  state.py  strategy.py  wss.py
tests/: test_backtest.py  test_dedup.py  test_ingest.py  test_matcher.py  test_selector.py  test_trader.py
